# QtGraphicView

./: .clang-format  .clang-tidy  CMakeLists.txt  CMakePresets.json  README.md
cmake/: install-config.cmake  install-rules.cmake  variables.cmake
include/QtGraphicView/: FlowStyle.h  FlowStyleCollection.h  QtGraphicView.hpp
source/: FlowStyleCollection.cpp  QtGraphicView.cpp
test/: CMakeLists.txt
test/source/: QtGraphicView_test.cpp
